--- a/stil.css
+++ b/stil.css
@@ -38,11 +38,13 @@ body {
 	display: block;
 	text-align: center;
 	width: 100%;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 #tal-container input {
 	display: block;
-	width: 80%;
-	margin: 1% 10%;
+	width: 90%;
+	margin: 1% 5%;
 	text-align: center;
 	font-size: 4rem;
 	font-size: 4vw;
@@ -53,8 +55,8 @@ body {
 #tal-container button {
 	font-size: 1rem;
 	padding: 0.5%;
-	width: 80%;
-	margin: 1% 10%;
+	width: 90%;
+	margin: 1% 5%;
 	cursor: pointer;
 	background-color: transparent;
 	border: 0.1rem solid #282828;
@@ -77,10 +79,9 @@ body {
 }
 .inst-rad input {
 	display: block;
-	width: 50%;
-	margin: 0 25%;
+	width: 60%;
+	margin: 0 20%;
 	padding: 2%;
-	margin-right: 25%;
 	text-align: center;
 	cursor: pointer;
 }
