--- a/multitest1/stil.css
+++ b/multitest1/stil.css
@@ -84,6 +84,15 @@
 
 	border: 0.1rem solid black;
 }
+	#top-col button {
+		width: 40%;
+		display: block;
+		float: left;
+		margin: 1% 5%;
+		padding: 1%;
+		font-size: 1.5rem;
+		cursor: pointer;
+	}
 
 #bot-col {
 	display: block;
@@ -94,4 +103,39 @@
 
 	border: 0.1rem solid black;
 }
+	#bot-col button {
+		width: 40%;
+		display: block;
+		float: left;
+		margin: 1% 5%;
+		padding: 1%;
+		font-size: 1.5rem;
+		cursor: pointer;
+	}
 
+.display-num {
+		width: 100%;
+		padding: 10%;
+		font-size: 2rem;
+		text-align: center;
+		display: block;
+		float: left;
+	}
+
+#stats {
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: none;
+	background-color: rgba(255,255,255,0.6);
+	z-index: 1111;
+}
+#stats span {
+	font-size: 3rem;
+	display: block;
+	width: 100%;
+	text-align: center;
+	padding: 5%;
+}
