--- a/fly/stil.css
+++ b/fly/stil.css
@@ -46,7 +46,9 @@ html {
 	background-color: #C45240;
 }
 
-#compare-container {
+
+
+#main-container {
 	width: 98%;
 	margin: 1%;
 	background-color: white;
@@ -54,36 +56,24 @@ html {
 	overflow: hidden;
 	display: none;
 }
-
-#spot-container {
-	overflow: hidden;
-	margin: 0 20%;
-}
-.row {
-	width: 50%;
-	margin: 5rem 0;
+#target-number {
+	width: 100%;
 	text-align: center;
-	float: left;
+	font-size: 2rem;
+	padding: 1rem;
 }
-.row span {
-	font-size: 1.5rem;
-	font-weight: bold;
-}
-#button-container {
-	overflow: hidden;
-}
-#button-container button {
+#target-number span {
 	border: 0.1rem solid black;
-	color: black;
-	padding: 2rem;
+	padding: 0.1rem;
 	cursor: pointer;
-	background-color: white;
-	font-size: 1rem;
-	width: 50%;
-	float: left;
-	transition: 0.1s;
 }
-#button-container button:hover {
-	color: white;
-	background-color: black;
+
+#container-numbers {
+	width: 100%,
+	padding: 1rem;
+	display: flex;
+	justify-content: space-around;
+}
+#container-numbers button {
+	font-size: 1.5rem;
 }
