--- a/compare/stil.css
+++ b/compare/stil.css
@@ -57,7 +57,6 @@ html {
 
 #spot-container {
 	overflow: hidden;
-	margin: 0 20%;
 }
 .row {
 	width: 50%;
@@ -65,9 +64,11 @@ html {
 	text-align: center;
 	float: left;
 }
-.row span {
+.row p {
 	font-size: 1.5rem;
 	font-weight: bold;
+	overflow-wrap: break-word;
+	display: block;
 }
 #button-container {
 	overflow: hidden;
