--- a/fly/stil.css
+++ b/fly/stil.css
@@ -107,3 +107,7 @@ html {
 	background-color: black;
 	color: white;
 }
+#container-numbers button:disabled {
+	opacity: 0.4;
+	cursor: not-allowed;
+}
