--- a/fly/stil.css
+++ b/fly/stil.css
@@ -46,6 +46,20 @@ html {
 	background-color: #C45240;
 }
 
+#timer-container {
+	width: 98%;
+	margin: 1%;
+	background-color: white;
+	border: 0.1rem solid black;
+	overflow: hidden;
+	display: none;
+	font-size: 2rem;
+	text-align: center;
+	padding: 0.5rem;
+	font-weight: bold;
+	display: none;
+}
+
 
 
 #main-container {
