--- a/compare/stil.css
+++ b/compare/stil.css
@@ -24,6 +24,23 @@ html {
 	background-color: black;
 }
 
+#option-container {
+	width: 98%;
+	margin: 1%;
+	background-color: white;
+	border: 0.1rem solid black;
+	overflow: hidden;
+	display: block;
+}
+#option-container label {
+	text-align: center;
+	width: 100%;
+	display: block;
+	cursor: pointer;
+	font-size: 1rem;
+	padding: 1rem;
+}
+
 #score-container {
 	width: 98%;
 	margin: 1%;
